// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bucket is public 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":["s3:GetObject"],"Resource":["\${aws_s3_bucket.my_bucket.arn}/*"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
  },
}
`;

exports[`bucket is public 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix must be lowercase 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "The-UncannyBucket": {
        "bucket_prefix": "the-uncanny-bucket-c88a0953-",
        "force_destroy": false,
      },
    },
  },
}
`;

exports[`bucket prefix must be lowercase 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The-Uncanny.Bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/The-Uncanny.Bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "The-Uncanny.Bucket",
                "path": "root/Default/The-Uncanny.Bucket",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix valid 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "the-uncannybucket": {
        "bucket_prefix": "the-uncanny-bucket-c8e2755c-",
        "force_destroy": false,
      },
    },
  },
}
`;

exports[`bucket prefix valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "the-uncanny.bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/the-uncanny.bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "the-uncanny.bucket",
                "path": "root/Default/the-uncanny.bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onCreate method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_OnCreate-OnMessage0_CloudwatchLogGroup_E3DA1BCC": {
        "name": "/aws/lambda/OnCreate-OnMessage0-c8b6ea23",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_OnCreate-OnMessage0_IamRolePolicy_8D03B4D5": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_OnCreate-OnMessage0_IamRolePolicyAttachment_4F57A9D0": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_OnCreate-OnMessage0_8A9D7A6E": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "OnCreate-OnMessage0-c8b6ea23",
          },
        },
        "function_name": "OnCreate-OnMessage0-c8b6ea23",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_OnCreate-OnMessage0_S3Object_02866773.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_OnCreate-OnMessage0_InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8_60C310A7": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_OnCreate-OnMessage0_8A9D7A6E.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_OnCreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_F8789A85",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Put",
            ],
            "id": "on-oncreate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":["s3:GetObject"],"Resource":["\${aws_s3_bucket.my_bucket.arn}/*"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_OnCreate-OnMessage0_S3Object_02866773": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_OnCreate_14226F85": {
        "name": "OnCreate-c88b8dd6",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_OnCreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_F8789A85": {
        "arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
        "policy": "{"Statement":[{"Effect":"Allow","Principal":{"Service":"s3.amazonaws.com"},"Action":"sns:Publish","Resource":"\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}","Condition":{"ArnEquals":{"aws:SourceArn":"\${aws_s3_bucket.my_bucket.arn}"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_OnCreate_TopicSubscription0_4D6EC9AA": {
        "endpoint": "\${aws_lambda_function.my_bucket_OnCreate-OnMessage0_8A9D7A6E.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
      },
    },
  },
}
`;

exports[`bucket with onCreate method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "OnCreate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnCreate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/OnCreate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/OnCreate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "OnCreate",
                    "path": "root/Default/my_bucket/OnCreate",
                  },
                  "OnCreate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "OnCreate-OnMessage0",
                    "path": "root/Default/my_bucket/OnCreate-OnMessage0",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onDelete method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_OnDelete-OnMessage0_CloudwatchLogGroup_24024A4B": {
        "name": "/aws/lambda/OnDelete-OnMessage0-c804d7e9",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_OnDelete-OnMessage0_IamRole_F99741C4": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_OnDelete-OnMessage0_IamRolePolicy_B1B53387": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_bucket_OnDelete-OnMessage0_IamRole_F99741C4.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_OnDelete-OnMessage0_IamRolePolicyAttachment_221C4BFC": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_OnDelete-OnMessage0_IamRole_F99741C4.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_OnDelete-OnMessage0_DB633A4C": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "OnDelete-OnMessage0-c804d7e9",
          },
        },
        "function_name": "OnDelete-OnMessage0-c804d7e9",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_bucket_OnDelete-OnMessage0_IamRole_F99741C4.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_OnDelete-OnMessage0_S3Object_B50900E0.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_OnDelete-OnMessage0_InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a_63129B62": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_OnDelete-OnMessage0_DB633A4C.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_OnDelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_54A5EE56",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectRemoved:*",
            ],
            "id": "on-ondelete-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":["s3:GetObject"],"Resource":["\${aws_s3_bucket.my_bucket.arn}/*"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_OnDelete-OnMessage0_S3Object_B50900E0": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_OnDelete_E3DBFE86": {
        "name": "OnDelete-c818f138",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_OnDelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_54A5EE56": {
        "arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
        "policy": "{"Statement":[{"Effect":"Allow","Principal":{"Service":"s3.amazonaws.com"},"Action":"sns:Publish","Resource":"\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}","Condition":{"ArnEquals":{"aws:SourceArn":"\${aws_s3_bucket.my_bucket.arn}"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_OnDelete_TopicSubscription0_7974ED63": {
        "endpoint": "\${aws_lambda_function.my_bucket_OnDelete-OnMessage0_DB633A4C.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
      },
    },
  },
}
`;

exports[`bucket with onDelete method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "OnDelete": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnDelete/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/OnDelete/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/OnDelete/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "OnDelete",
                    "path": "root/Default/my_bucket/OnDelete",
                  },
                  "OnDelete-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "OnDelete-OnMessage0",
                    "path": "root/Default/my_bucket/OnDelete-OnMessage0",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onEvent method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_OnCreate-OnMessage0_CloudwatchLogGroup_E3DA1BCC": {
        "name": "/aws/lambda/OnCreate-OnMessage0-c8b6ea23",
        "retention_in_days": 30,
      },
      "my_bucket_OnDelete-OnMessage0_CloudwatchLogGroup_24024A4B": {
        "name": "/aws/lambda/OnDelete-OnMessage0-c804d7e9",
        "retention_in_days": 30,
      },
      "my_bucket_OnUpdate-OnMessage0_CloudwatchLogGroup_CA36F40B": {
        "name": "/aws/lambda/OnUpdate-OnMessage0-c81076cf",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
      "my_bucket_OnDelete-OnMessage0_IamRole_F99741C4": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
      "my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_OnCreate-OnMessage0_IamRolePolicy_8D03B4D5": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA.name}",
      },
      "my_bucket_OnDelete-OnMessage0_IamRolePolicy_B1B53387": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_bucket_OnDelete-OnMessage0_IamRole_F99741C4.name}",
      },
      "my_bucket_OnUpdate-OnMessage0_IamRolePolicy_94D2868B": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_OnCreate-OnMessage0_IamRolePolicyAttachment_4F57A9D0": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA.name}",
      },
      "my_bucket_OnDelete-OnMessage0_IamRolePolicyAttachment_221C4BFC": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_OnDelete-OnMessage0_IamRole_F99741C4.name}",
      },
      "my_bucket_OnUpdate-OnMessage0_IamRolePolicyAttachment_5073159D": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_OnCreate-OnMessage0_8A9D7A6E": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "OnCreate-OnMessage0-c8b6ea23",
          },
        },
        "function_name": "OnCreate-OnMessage0-c8b6ea23",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_bucket_OnCreate-OnMessage0_IamRole_A815D0BA.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_OnCreate-OnMessage0_S3Object_02866773.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
      "my_bucket_OnDelete-OnMessage0_DB633A4C": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "OnDelete-OnMessage0-c804d7e9",
          },
        },
        "function_name": "OnDelete-OnMessage0-c804d7e9",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_bucket_OnDelete-OnMessage0_IamRole_F99741C4.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_OnDelete-OnMessage0_S3Object_B50900E0.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
      "my_bucket_OnUpdate-OnMessage0_B4C11A28": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "OnUpdate-OnMessage0-c81076cf",
          },
        },
        "function_name": "OnUpdate-OnMessage0-c81076cf",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_OnUpdate-OnMessage0_S3Object_1E352BCE.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_OnCreate-OnMessage0_InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8_60C310A7": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_OnCreate-OnMessage0_8A9D7A6E.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
      },
      "my_bucket_OnDelete-OnMessage0_InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a_63129B62": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_OnDelete-OnMessage0_DB633A4C.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
      },
      "my_bucket_OnUpdate-OnMessage0_InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229_327F1182": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_OnUpdate-OnMessage0_B4C11A28.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_OnCreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_F8789A85",
          "aws_sns_topic_policy.my_bucket_OnUpdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_A302B66A",
          "aws_sns_topic_policy.my_bucket_OnDelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_54A5EE56",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Put",
            ],
            "id": "on-oncreate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
          },
          {
            "events": [
              "s3:ObjectCreated:Post",
            ],
            "id": "on-onupdate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
          },
          {
            "events": [
              "s3:ObjectRemoved:*",
            ],
            "id": "on-ondelete-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":["s3:GetObject"],"Resource":["\${aws_s3_bucket.my_bucket.arn}/*"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_OnCreate-OnMessage0_S3Object_02866773": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
      "my_bucket_OnDelete-OnMessage0_S3Object_B50900E0": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
      "my_bucket_OnUpdate-OnMessage0_S3Object_1E352BCE": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_OnCreate_14226F85": {
        "name": "OnCreate-c88b8dd6",
      },
      "my_bucket_OnDelete_E3DBFE86": {
        "name": "OnDelete-c818f138",
      },
      "my_bucket_OnUpdate_0AC450AE": {
        "name": "OnUpdate-c84ec846",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_OnCreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_F8789A85": {
        "arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
        "policy": "{"Statement":[{"Effect":"Allow","Principal":{"Service":"s3.amazonaws.com"},"Action":"sns:Publish","Resource":"\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}","Condition":{"ArnEquals":{"aws:SourceArn":"\${aws_s3_bucket.my_bucket.arn}"}}}]}",
      },
      "my_bucket_OnDelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_54A5EE56": {
        "arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
        "policy": "{"Statement":[{"Effect":"Allow","Principal":{"Service":"s3.amazonaws.com"},"Action":"sns:Publish","Resource":"\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}","Condition":{"ArnEquals":{"aws:SourceArn":"\${aws_s3_bucket.my_bucket.arn}"}}}]}",
      },
      "my_bucket_OnUpdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_A302B66A": {
        "arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
        "policy": "{"Statement":[{"Effect":"Allow","Principal":{"Service":"s3.amazonaws.com"},"Action":"sns:Publish","Resource":"\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}","Condition":{"ArnEquals":{"aws:SourceArn":"\${aws_s3_bucket.my_bucket.arn}"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_OnCreate_TopicSubscription0_4D6EC9AA": {
        "endpoint": "\${aws_lambda_function.my_bucket_OnCreate-OnMessage0_8A9D7A6E.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_OnCreate_14226F85.arn}",
      },
      "my_bucket_OnDelete_TopicSubscription0_7974ED63": {
        "endpoint": "\${aws_lambda_function.my_bucket_OnDelete-OnMessage0_DB633A4C.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_OnDelete_E3DBFE86.arn}",
      },
      "my_bucket_OnUpdate_TopicSubscription0_56144B6F": {
        "endpoint": "\${aws_lambda_function.my_bucket_OnUpdate-OnMessage0_B4C11A28.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
      },
    },
  },
}
`;

exports[`bucket with onEvent method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "OnCreate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnCreate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/OnCreate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/OnCreate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "OnCreate",
                    "path": "root/Default/my_bucket/OnCreate",
                  },
                  "OnCreate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/InvokePermission-c88b8dd64481dc3b326d5e0afc3b583852a5c383f8",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/OnCreate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "OnCreate-OnMessage0",
                    "path": "root/Default/my_bucket/OnCreate-OnMessage0",
                  },
                  "OnDelete": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnDelete/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/OnDelete/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/OnDelete/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "OnDelete",
                    "path": "root/Default/my_bucket/OnDelete",
                  },
                  "OnDelete-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/InvokePermission-c818f13827fc0721db2eca69eab078997f6f9a8c7a",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/OnDelete-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "OnDelete-OnMessage0",
                    "path": "root/Default/my_bucket/OnDelete-OnMessage0",
                  },
                  "OnUpdate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnUpdate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/OnUpdate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/OnUpdate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "OnUpdate",
                    "path": "root/Default/my_bucket/OnUpdate",
                  },
                  "OnUpdate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "OnUpdate-OnMessage0",
                    "path": "root/Default/my_bucket/OnUpdate-OnMessage0",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onUpdate method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_OnUpdate-OnMessage0_CloudwatchLogGroup_CA36F40B": {
        "name": "/aws/lambda/OnUpdate-OnMessage0-c81076cf",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_OnUpdate-OnMessage0_IamRolePolicy_94D2868B": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_OnUpdate-OnMessage0_IamRolePolicyAttachment_5073159D": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_OnUpdate-OnMessage0_B4C11A28": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "OnUpdate-OnMessage0-c81076cf",
          },
        },
        "function_name": "OnUpdate-OnMessage0-c81076cf",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_bucket_OnUpdate-OnMessage0_IamRole_846F92CF.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_OnUpdate-OnMessage0_S3Object_1E352BCE.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_OnUpdate-OnMessage0_InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229_327F1182": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_OnUpdate-OnMessage0_B4C11A28.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_OnUpdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_A302B66A",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Post",
            ],
            "id": "on-onupdate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":["s3:GetObject"],"Resource":["\${aws_s3_bucket.my_bucket.arn}/*"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_OnUpdate-OnMessage0_S3Object_1E352BCE": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_OnUpdate_0AC450AE": {
        "name": "OnUpdate-c84ec846",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_OnUpdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_A302B66A": {
        "arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
        "policy": "{"Statement":[{"Effect":"Allow","Principal":{"Service":"s3.amazonaws.com"},"Action":"sns:Publish","Resource":"\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}","Condition":{"ArnEquals":{"aws:SourceArn":"\${aws_s3_bucket.my_bucket.arn}"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_OnUpdate_TopicSubscription0_56144B6F": {
        "endpoint": "\${aws_lambda_function.my_bucket_OnUpdate-OnMessage0_B4C11A28.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_OnUpdate_0AC450AE.arn}",
      },
    },
  },
}
`;

exports[`bucket with onUpdate method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "OnUpdate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnUpdate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/OnUpdate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/OnUpdate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "OnUpdate",
                    "path": "root/Default/my_bucket/OnUpdate",
                  },
                  "OnUpdate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/InvokePermission-c84ec84688efaa3bd78e7099e53e40fb2fe4ca5229",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/OnUpdate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "OnUpdate-OnMessage0",
                    "path": "root/Default/my_bucket/OnUpdate-OnMessage0",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight files 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":["s3:GetObject"],"Resource":["\${aws_s3_bucket.my_bucket.arn}/*"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_S3Object-file1txt_7AFE54AE": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "test1",
        "key": "file1.txt",
      },
      "my_bucket_S3Object-file2txt_CB6BC703": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "test2",
        "key": "file2.txt",
      },
    },
  },
}
`;

exports[`bucket with two preflight files 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3Object-file1.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object-file1.txt",
                    "path": "root/Default/my_bucket/S3Object-file1.txt",
                  },
                  "S3Object-file2.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object-file2.txt",
                    "path": "root/Default/my_bucket/S3Object-file2.txt",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight objects 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":["s3:GetObject"],"Resource":["\${aws_s3_bucket.my_bucket.arn}/*"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_S3Object-file1txt_7AFE54AE": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "hello world",
        "key": "file1.txt",
      },
      "my_bucket_S3Object-file2txt_CB6BC703": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "boom bam",
        "key": "file2.txt",
      },
    },
  },
}
`;

exports[`bucket with two preflight objects 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3Object-file1.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object-file1.txt",
                    "path": "root/Default/my_bucket/S3Object-file1.txt",
                  },
                  "S3Object-file2.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object-file2.txt",
                    "path": "root/Default/my_bucket/S3Object-file2.txt",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
  },
}
`;

exports[`create a bucket 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
